Modified Structure, Added Recipes

--- a/_includes/frontpage-content.html
+++ b/_includes/frontpage-content.html
@@ -42,9 +42,8 @@
 
             </div>
             <div class="entry-content clearfix">
-                <p>{{ post.content | strip_html | truncate: '250' | escape }}</p>
                 <a class="more-link" title="{{ post.title }}" href="{{ post.url }}">
-                    <span>Read more</span>
+                    <span>Mehr lesen...</span>
                 </a>
             </div>
         </div>
