--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -21,12 +21,12 @@
 
               <div class="home-icon">
                   <a href="/search/" title="search">
-                      <i class="fa-solid fa-magnifying-glass"></i>
+                      <i class="fa-solid fa-magnifying-glass"></i> Suche
                   </a>
               </div>
               <div class="home-icon">
                   <a href="/tags/" title="tags">
-                      <i class="fa-solid fa-tags"></i>
+                      <i class="fa-solid fa-tags"></i> Tags
                   </a>
               </div>
 
