--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -30,7 +30,8 @@
 
             </div>
             <div class="entry-content clearfix">
-                <p>{{ content }}</p>
+                <img src="{{ page.thumbnail }}" class="img-thumbnail" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
+                <p style="margin-top: 40px;">{{ content }}</p>
             </div>
         </div>
     </article>
