--- a/_includes/newsbar.html
+++ b/_includes/newsbar.html
@@ -2,7 +2,7 @@
     <div class="inner-wrap clearfix">
 
         <div class="breaking-news">
-            <strong class="breaking-news-latest">Latest:</strong>
+            <strong class="breaking-news-latest">Neu:</strong>
 
             <ul class="newsticker">
 {% for post in site.posts limit:5 %}
