--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -19,12 +19,12 @@
                   {% assign name_page = page.title | append: name_page %}
               {% endfor %}
 
-              <div class="home-icon">
+              <div class="menu">
                   <a href="/search/" title="search">
                       <i class="fa-solid fa-magnifying-glass"></i> Suche
                   </a>
               </div>
-              <div class="home-icon">
+              <div class="menu">
                   <a href="/tags/" title="tags">
                       <i class="fa-solid fa-tags"></i> Tags
                   </a>
