--- a/_includes/content-zubereitung.html
+++ b/_includes/content-zubereitung.html
@@ -27,6 +27,7 @@
                     <!-- Zutaten START -->
                     {% for nextstep in site.data.[page.datafile].zutaten %}
                     <div class="form-check">
+                        <hr style="border: 1px dashed gray;">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
                         <label class="form-check-label" for="flexCheckDefault">
                             {{ nextstep.s }}
@@ -42,6 +43,7 @@
                     {% endif %}
                     {% for nextstep in site.data.[page.datafile].zubereitung %}
                     <div class="form-check">
+                        <hr style="border: 1px dashed gray;">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
                         <label class="form-check-label" for="flexCheckDefault">
                             {{ nextstep.s }}
