--- a/_includes/content-zubereitung.html
+++ b/_includes/content-zubereitung.html
@@ -1,5 +1,5 @@
 <section data-bs-version="5.1">
-    <div style="max-width: 600px; margin: auto; font-size: 120%; line-height: 200%;">
+    <div style="max-width: 600px; margin: auto;">
         <div style="margin-bottom: 20px;">
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="list-style-type: none;">
                 <li class="nav-item" role="presentation">
@@ -15,19 +15,114 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="rezeptinfo-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
                     <!-- Rezeptinfo START -->
-                    {% if  page.portionen %}
-                        <b>{{ site.portionen_icon }} Portionen: <span class="badge bg-primary">{{ page.portionen }}</span><br></b>
+                    {% if page.portionen %}
+                    <b>{{ site.portionen_icon }} Portionen: <span class="badge bg-primary">{{ page.portionen }}</span><br /></b>
                     {% endif %}
                     {% if page.gesamtzeitaufwand %}
-                        <b>{{ site.timer_icon }} Gesamtzeitaufwand:  <span class="badge bg-primary">{{ page.gesamtzeitaufwand }}</span></b>
+                    <b>{{ site.timer_icon }} Gesamtzeitaufwand: <span class="badge bg-primary">{{ page.gesamtzeitaufwand }}</span></b>
                     {% endif %}
+                    <!-- Naehrwerte START -->
+                    {% if site.data.[page.datafile].naehrwerte %}
+                    <div style="margin-top: 30px; line-height: 60%;">
+                        <h2>
+                            <b>Nährwerte:</b>
+                        </h2>
+                        <p>Angaben pro 100g</p>
+                        <hr style="border: 3px solid black;" />
+                        <table style="border-collapse: collapse; width: 100%;" border="1">
+                            <tbody>
+                                <tr>
+                                    <td style="width: 48.9015%;"><b>Preis / Portion:</b></td>
+                                    <td style="width: 48.9015%; text-align: right;">
+                                        <i><b>{{ site.data.[page.datafile].naehrwerte.preis_pro_portion }} EUR</b></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 48.9015%;"><b>Menge / Portion:</b></td>
+                                    <td style="width: 48.9015%; text-align: right;">
+                                        <i><b>{{ site.data.[page.datafile].naehrwerte.menge_pro_portion }} g</b></i>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <h4>
+                            <b>Kalorien: {{ site.data.[page.datafile].naehrwerte.kalorien }}</b>
+                        </h4>
+                        <table style="border-collapse: collapse; width: 100%;" border="1">
+                            <hr style="border: 3px solid black;" />
+                            <table style="border-collapse: collapse; width: 100%;" border="1">
+                                <tbody>
+                                    <tr>
+                                        <td style="width: 48.9015%;"><b>Fett</b></td>
+                                        <td style="width: 48.9015%; text-align: right;">
+                                            <i><b>{{ site.data.[page.datafile].naehrwerte.fett }} g</b></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="width: 48.9015%;">&nbsp; Davon ges&auml;ttigte Fetts&auml;uren</td>
+                                        <td style="width: 48.9015%; text-align: right;"><i>{{ site.data.[page.datafile].naehrwerte.ges_fette }} g</i></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <hr style="border: 1px dashed gray;" />
+                            <table style="border-collapse: collapse; width: 100%;" border="1">
+                                <tbody>
+                                    <tr>
+                                        <td style="width: 48.9015%;"><b>Kohlenhydrate</b></td>
+                                        <td style="width: 48.9015%; text-align: right;">
+                                            <i><b>{{ site.data.[page.datafile].naehrwerte.kohlenhydrate }} g</b></i>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="width: 48.9015%;">&nbsp; Davon Zucker</td>
+                                        <td style="width: 48.9015%; text-align: right;"><i>{{ site.data.[page.datafile].naehrwerte.zucker }} g</i></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <hr style="border: 1px dashed gray;" />
+                            <table style="border-collapse: collapse; width: 100%;" border="1">
+                                <tbody>
+                                    <tr>
+                                        <td style="width: 48.9015%;"><b>Ballaststoffe</b></td>
+                                        <td style="width: 48.9015%; text-align: right;">
+                                            <i><b>{{ site.data.[page.datafile].naehrwerte.ballaststoffe }} g</b></i>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <hr style="border: 1px dashed gray;" />
+                            <table style="border-collapse: collapse; width: 100%;" border="1">
+                                <tbody>
+                                    <tr>
+                                        <td style="width: 48.9015%;"><b>Eiwei&szlig;</b></td>
+                                        <td style="width: 48.9015%; text-align: right;">
+                                            <i><b>{{ site.data.[page.datafile].naehrwerte.eiweiss }} g</b></i>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <hr style="border: 1px dashed gray;" />
+                            <table style="border-collapse: collapse; width: 100%;" border="1">
+                                <tbody>
+                                    <tr>
+                                        <td style="width: 48.9015%;"><b>Salz</b></td>
+                                        <td style="width: 48.9015%; text-align: right;">
+                                            <i><b>{{ site.data.[page.datafile].naehrwerte.salz }} g</b></i>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </table>
+                    </div>
+                    {% endif %}
+                    <!-- Naehrwerte ENDE -->
                     <!-- Rezeptinfo ENDE -->
                 </div>
-                <div class="tab-pane fade" id="zutaten-tab-pane" role="tabpanel" aria-labelledby="zutaten-tab" tabindex="0">
+                <div class="tab-pane fade" id="zutaten-tab-pane" role="tabpanel" aria-labelledby="zutaten-tab" tabindex="0" style="font-size: 120%; line-height: 200%;">
                     <!-- Zutaten START -->
                     {% for nextstep in site.data.[page.datafile].zutaten %}
                     <div class="form-check">
-                        <hr style="border: 1px dashed gray;">
+                        <hr style="border: 1px dashed gray;" />
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
                         <label class="form-check-label" for="flexCheckDefault">
                             {{ nextstep.s }}
@@ -36,14 +131,15 @@
                     {% endfor %}
                     <!-- Zutaten ENDE -->
                 </div>
-                <div class="tab-pane fade" id="zubereitung-tab-pane" role="tabpanel" aria-labelledby="zubereitung-tab" tabindex="0">
+                <div class="tab-pane fade" id="zubereitung-tab-pane" role="tabpanel" aria-labelledby="zubereitung-tab" tabindex="0" style="font-size: 120%; line-height: 200%;">
                     <!-- Zubereitung START -->
                     {% if page.zeitaufwandzubereitung %}
-                        <h5><b>{{ site.timer_icon }} Zubereitungszeit: <span class="badge bg-primary">{{ page.zeitaufwandzubereitung }}</span></b></h5>
-                    {% endif %}
-                    {% for nextstep in site.data.[page.datafile].zubereitung %}
+                    <h5>
+                        <b>{{ site.timer_icon }} Zubereitungszeit: <span class="badge bg-primary">{{ page.zeitaufwandzubereitung }}</span></b>
+                    </h5>
+                    {% endif %} {% for nextstep in site.data.[page.datafile].zubereitung %}
                     <div class="form-check">
-                        <hr style="border: 1px dashed gray;">
+                        <hr style="border: 1px dashed gray;" />
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
                         <label class="form-check-label" for="flexCheckDefault">
                             {{ nextstep.s }}
