--- a/_includes/content-zubereitung.html
+++ b/_includes/content-zubereitung.html
@@ -59,7 +59,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="width: 48.9015%;">&nbsp; Davon ges. Fetts&auml;uren</td>
+                                        <td style="width: 48.9015%;">&nbsp; Davon ges. Fetts.</td>
                                         <td style="width: 48.9015%; text-align: right;"><i>{{ site.data.[page.datafile].naehrwerte.ges_fette }} g</i></td>
                                     </tr>
                                 </tbody>
