--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -2,18 +2,25 @@
     <div style="max-width: 600px; margin: auto;">
         <div style="margin-bottom: 20px;">
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="list-style-type: none;">
+                
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="info-tab" data-bs-toggle="tab" data-bs-target="#rezeptinfo-tab-pane" type="button" role="tab" aria-controls="rezeptinfo-tab-pane" aria-selected="true">Rezeptinfos</button>
                 </li>
+                {% if site.data.[page.datafile].zutaten %}
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="zutaten-tab" data-bs-toggle="tab" data-bs-target="#zutaten-tab-pane" type="button" role="tab" aria-controls="zutaten-tab-pane" aria-selected="false">Zutaten</button>
                 </li>
+                {% endif %}
+                {% if site.data.[page.datafile].vorbereitung %}
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="vorbereitung-tab" data-bs-toggle="tab" data-bs-target="#vorbereitung-tab-pane" type="button" role="tab" aria-controls="vorbereitung-tab-pane" aria-selected="false">Vorbereitung</button>
                 </li>
+                {% endif %}
+                {% if site.data.[page.datafile].zubereitung %}
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="zubereitung-tab" data-bs-toggle="tab" data-bs-target="#zubereitung-tab-pane" type="button" role="tab" aria-controls="zubereitung-tab-pane" aria-selected="false">Zubereitung</button>
                 </li>
+                {% endif %}
             </ul>
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="rezeptinfo-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
@@ -123,6 +130,7 @@
                     {% endif %}
                     <!-- Rezeptinfo ENDE -->
                 </div>
+                {% if site.data.[page.datafile].zutaten %}
                 <div class="tab-pane fade" id="zutaten-tab-pane" role="tabpanel" aria-labelledby="zutaten-tab" tabindex="0" style="font-size: 120%; line-height: 200%;">
                     <!-- Zutaten START -->
                     {% for nextstep in site.data.[page.datafile].zutaten %}
@@ -136,6 +144,8 @@
                     {% endfor %}
                     <!-- Zutaten ENDE -->
                 </div>
+                {% endif %}
+                {% if site.data.[page.datafile].vorbereitung %}
                 <div class="tab-pane fade" id="vorbereitung-tab-pane" role="tabpanel" aria-labelledby="vorbereitung-tab" tabindex="0" style="font-size: 120%; line-height: 200%;">
                     <!--  Vorbereitung START -->
                     {% if page.zeitaufwandvorbereitung %}
@@ -153,6 +163,8 @@
                     {% endfor %}
                     <!-- Vorbereitung ENDE -->
                 </div>
+                {% endif %}
+                {% if site.data.[page.datafile].zubereitung %}
                 <div class="tab-pane fade" id="zubereitung-tab-pane" role="tabpanel" aria-labelledby="zubereitung-tab" tabindex="0" style="font-size: 120%; line-height: 200%;">
                     <!-- Zubereitung START -->
                     {% if page.zeitaufwandzubereitung %}
@@ -170,6 +182,7 @@
                     {% endfor %}
                     <!-- Zubereitung ENDE -->
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
