--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -32,6 +32,7 @@
             <div class="entry-content clearfix">
                 <img src="{{ page.thumbnail }}" class="img-thumbnail" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
                 <p style="margin-top: 40px;">{{ content }}</p>
+                {% include tabs.html %}
             </div>
         </div>
     </article>
