--- a/_includes/cycling-block.html
+++ b/_includes/cycling-block.html
@@ -12,7 +12,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img data-src="{{ post.thumbnail }}" alt="Mobirise Website Builder" />
+                        <a href="{{ post.url }}"><img data-src="{{ post.thumbnail }}" alt="Mobirise Website Builder" /></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
