--- a/_includes/header-block.html
+++ b/_includes/header-block.html
@@ -33,9 +33,9 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                     {% assign name_page = "" %}
                     {% for page in site.pages %}
-                        {% unless page.title == null or page.hide or name_page contains page.title %}
+                        {% unless page.menutitle == null or page.hide or name_page contains page.title %}
                         <!-- Put cycling HTML here: -->
-                            <li class="nav-item"><a class="nav-link link text-black display-4" href="{{ page.url | relative_url }}"> {{ page.title }}</a></li>
+                            <li class="nav-item"><a class="nav-link link text-black display-4" href="{{ page.url | relative_url }}"> {{ page.menutitle }}</a></li>
                         <!-- End cycling HTML -->
                         {% endunless %}
                         {% assign name_page = page.title | append: name_page %}
