--- a/_includes/cycling-block.html
+++ b/_includes/cycling-block.html
@@ -11,9 +11,11 @@
             <!-- CYCLE START -->
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
+                    {% if post.thumbnail %}
                     <div class="item-img">
                         <a href="{{ post.url }}"><img data-src="{{ post.thumbnail }}" alt="Mobirise Website Builder" /></a>
                     </div>
+                    {% endif %}
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
                             <a href="{{ post.url }}" class="text-primary"><strong>{{ post.headline }}</strong></a>
