--- a/_includes/blog-nav-block.html
+++ b/_includes/blog-nav-block.html
@@ -3,11 +3,11 @@
         <tbody>
             <tr>
                 <td style="width: 48.9023%;">
-                    {% if page.previous.url %} <b><h5 class="mbr-text mbr-fonts-style display-7"><a href="{{page.previous.url}}" rel="prev"><span class="meta-nav">&larr;</span> {{page.previous.headline}}</a></h5></b> {% endif %}
+                    {% if page.previous.url %} <b><h5><a href="{{page.previous.url}}" rel="prev"><span class="meta-nav">&larr;</span> {{page.previous.headline}}</a></h5></b> {% endif %}
                 </td>
 
                 <td style="width: 48.9023%; text-align: right;">
-                    {% if page.next.url %} <h5 class="mbr-text mbr-fonts-style display-7"><a href="{{page.next.url}}" rel="next">{{page.next.headline }} <span class="meta-nav">&rarr;</span></a></h5> {% endif %}
+                    {% if page.next.url %} <h5"><a href="{{page.next.url}}" rel="next">{{page.next.headline }} <span class="meta-nav">&rarr;</span></a></h5> {% endif %}
                 </td>
             </tr>
         </tbody>
