--- a/_includes/blog-nav-block.html
+++ b/_includes/blog-nav-block.html
@@ -7,7 +7,7 @@
                 </td>
 
                 <td style="width: 48.9023%; text-align: right;">
-                    {% if page.next.url %} <h5"><a href="{{page.next.url}}" rel="next">{{page.next.headline }} <span class="meta-nav">&rarr;</span></a></h5> {% endif %}
+                    {% if page.next.url %} <h5><a href="{{page.next.url}}" rel="next">{{page.next.headline }} <span class="meta-nav">&rarr;</span></a></h5> {% endif %}
                 </td>
             </tr>
         </tbody>
