--- a/_includes/blog-nav-block.html
+++ b/_includes/blog-nav-block.html
@@ -3,7 +3,7 @@
         <tbody>
             <tr>
                 <td style="width: 48.9023%;">
-                    {% if page.previous.url %} <b><h5><a href="{{page.previous.url}}" rel="prev"><span class="meta-nav">&larr;</span> {{page.previous.headline}}</a></h5></b> {% endif %}
+                    {% if page.previous.url %} <h5><a href="{{page.previous.url}}" rel="prev"><span class="meta-nav">&larr;</span> {{page.previous.headline}}</a></h5> {% endif %}
                 </td>
 
                 <td style="width: 48.9023%; text-align: right;">
