--- a/_includes/tab-block.html
+++ b/_includes/tab-block.html
@@ -1,4 +1,13 @@
 <section id="portfolio" class="portfolio">
+
+    <style>
+        input[type=checkbox]:checked + label.strikethrough{
+      text-decoration: line-through;
+      color: gray;
+      font-style: italic;
+    }
+    </style>
+
     <div class="container" data-aos="fade-up">
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -134,7 +143,7 @@
                     <div class="form-check">
                         <hr style="border: 1px dashed gray;" />
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label strikethrough" for="flexCheckDefault">
                             {{ nextstep.s }}
                         </label>
                     </div>
@@ -153,7 +162,7 @@
                         <div class="form-check">
                             <hr style="border: 1px dashed gray;" />
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">
+                            <label class="form-check-label strikethrough" for="flexCheckDefault">
                                 {{ nextstep.s }}
                             </label>
                         </div>
@@ -173,7 +182,7 @@
                         <div class="form-check">
                             <hr style="border: 1px dashed gray;" />
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">
+                            <label class="form-check-label strikethrough" for="flexCheckDefault">
                                 {{ nextstep.s }}
                             </label>
                         </div>
