Rezept "Kartoffelgulasch" hinzugefügt

--- a/_includes/cycling-block.html
+++ b/_includes/cycling-block.html
@@ -11,7 +11,9 @@
                     <div class="pic"><img src="{{ post.thumbnail }}" alt="" /></div>
                     <div class="details">
                         <h4><a href="{{ post.url }}" style="color:white">{{ post.headline }}</a></h4>
-                        <p>{% include cycling-tags-post.html %}</p>
+                        <div>
+                            <p>{% include cycling-tags-post.html %}</p>
+                        </div>
                     </div>
                 </div>
             </div>
