--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -17,7 +17,7 @@
         {% include frontpage-content.html %}
         {% include footer-block.html %}
         {% include scripts.html %}
-        {% include cookie-alert-block.html %}
+        <!-- {% include cookie-alert-block.html %} -->
 
         <!-- End BODY-HTML -->
         {% if site.htmlbeforebodyend %}
