--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -6,7 +6,7 @@
         {% include feat-image-block.html %}
         {{ content }}
         {% include tab-block.html %}
-        <hr>
+        {% include related-posts.html %}
         <section class="content5 cid-tyyJcTFpkx" data-bs-version="5.1" id="content5-4">
             <div class="container">
                 <div class="row justify-content-center">
