--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -4,6 +4,8 @@
     <div class="container">
         {% include headline-block.html %}
         {% include feat-image-block.html %}
+        <b>TAGS:</b>&nbsp;{% include cycling-tags-post.html %}
+        <a href="#portfolio" style="color: #333;"><h5><b><i class="fa-solid fa-utensils"></i> <u>Direkt zum Rezept</u></b></h5></a>
         {{ content }}
         {% include tab-block.html %}
         {% include related-posts.html %}
