--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>Dies könnte Dich auch interessieren:</h4>
+    <h4><b>Dies könnte Dich auch interessieren:</b></h4>
 </div>
 <hr>
 <style>
