--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -6,7 +6,7 @@
         {% include feat-image-block.html %}
         <center><b>{% include cycling-tags-post-gray.html %}</b></center>
         <br><br>
-        <a href="#portfolio" style="color: #333;"><h5><b><i class="fa-solid fa-utensils"></i> <u>Springe Direkt zum Rezept</u></b></h5></a>
+        <a href="#portfolio" style="color: #333;"><h5><b><i class="fa-solid fa-utensils"></i> <u>Springe Direkt zum Rezept <i class="fa-regular fa-circle-down"></i></u></b></h5></a>
         {{ content }}
         {% include tab-block.html %}
         {% include related-posts.html %}
