--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -9,7 +9,13 @@
         <a href="#portfolio" style="color: #333;"><h5><b><i class="fa-solid fa-utensils"></i> <u>Springe Direkt zum Rezept <i class="fa-regular fa-circle-down"></i></u></b></h5></a>
         {{ content }}
         {% include tab-block.html %}
+        <p style="text-align: right;">
+            <a href="#" style="color: #333">Scrolle zum Anfang <i class="fa-solid fa-chevron-up"></i></a>
+        </p>
         {% include related-posts.html %}
+        <p style="text-align: right;">
+            <a href="#" style="color: #333">Scrolle zum Anfang <i class="fa-solid fa-chevron-up"></i></a>
+        </p>
         <section class="content5 cid-tyyJcTFpkx" data-bs-version="5.1" id="content5-4">
             <div class="container">
                 <div class="row justify-content-center">
