--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -34,7 +34,7 @@ layout: page
                     <hr>
                     <p>
                         <!-- Displays the list of tags-->
-                        {% include tag-list.html tags=rawtags %}
+                        {% include tag-list-gray.html tags=rawtags %}
                         <br />
                         <br />
                     </p>
