--- a/_includes/page-content.html
+++ b/_includes/page-content.html
@@ -1,6 +1,6 @@
-
   <section class="inner-page pt-4">
     <div class="container">
+      {% include headline-block.html %}
       {{ content }}
     </div>
   </section>
