--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -8,16 +8,16 @@
         <br><br>
         <a href="#portfolio" style="color: #333;"><h5><b><i class="fa-solid fa-utensils"></i> <u>Springe Direkt zum Rezept <i class="fa-regular fa-circle-down"></i></u></b></h5></a>
         
-        {% if site.data.[page.datafile].einleitungstext %}
+        {% if site.data.[page.datafile].Artikeltexte.einleitungstext %}
             <p>
-                {{ site.data.[page.datafile].einleitungstext }}
+                {{ site.data.[page.datafile].Artikeltexte.einleitungstext }}
             </p>
             <p style="text-align: right;">
                 <a href="#" style="color: #333">Scrolle zum Anfang <i class="fa-solid fa-chevron-up"></i></a>
             </p>
         {% endif %}
 
-        {% if site.data.[page.datafile].zutatentext %}
+        {% if site.data.[page.datafile].Artikeltexte.zutatentext %}
         <div class="row" style="margin-bottom: 20px;">
             <div class="col-12 col-lg-4">
                 <img src="/assets/images/zutaten.png" alt="Zutaten" />
@@ -25,7 +25,7 @@
             <div class="col-12 col-lg">
                 <h3>Über die Zutaten:</h3>
                 <p>
-                    {{ site.data.[page.datafile].zutatentext }}
+                    {{ site.data.[page.datafile].Artikeltexte.zutatentext }}
                 </p>
             </div>
         </div>
@@ -34,7 +34,7 @@
             </p>
         {% endif %}        
 
-        {% if site.data.[page.datafile].variationentext %}
+        {% if site.data.[page.datafile].Artikeltexte.variationentext %}
         <div class="row" style="margin-bottom: 20px;">
             <div class="col-12 col-lg-4">
                 <img src="/assets/images/variations.png" alt="Variationen" />
@@ -42,7 +42,7 @@
             <div class="col-12 col-lg">
                 <h3>Variationen:</h3>
                 <p>
-                    {{ site.data.[page.datafile].variationentext }}
+                    {{ site.data.[page.datafile].Artikeltexte.variationentext }}
                 </p>
             </div>
         </div>
@@ -51,7 +51,7 @@
         </p>
         {% endif %}
         
-        {% if site.data.[page.datafile].serviervorschlaegetext %}
+        {% if site.data.[page.datafile].Artikeltexte.serviervorschlaegetext %}
         <div class="row" style="margin-bottom: 20px;">
             <div class="col-12 col-lg-4">
                 <img src="/assets/images/serving-tips.jpg" alt="Variationen" />
@@ -59,7 +59,7 @@
             <div class="col-12 col-lg">
                 <h3>Serviervorschläge:</h3>
                 <p>
-                    {{ site.data.[page.datafile].serviervorschlaegetext }}
+                    {{ site.data.[page.datafile].Artikeltexte.serviervorschlaegetext }}
                 </p>
             </div>
         </div>
@@ -72,7 +72,7 @@
 
         {{ content }}
 
-        {% include tab-block.html %}
+        {% include tab-block-new.html %}
         <p style="text-align: right;">
             <a href="#" style="color: #333">Scrolle zum Anfang <i class="fa-solid fa-chevron-up"></i></a>
         </p>
