--- a/_includes/blog-content.html
+++ b/_includes/blog-content.html
@@ -72,7 +72,7 @@
 
         {{ content }}
 
-        {% include tab-block-new.html %}
+        {% include tab-block.html %}
         <p style="text-align: right;">
             <a href="#" style="color: #333">Scrolle zum Anfang <i class="fa-solid fa-chevron-up"></i></a>
         </p>
